<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SignUpView.SignUpActivity"
    android:gravity=""
    android:fitsSystemWindows="true">

    <Button
        android:id="@+id/sign_up_back"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/back1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/sign_up_back">

        <ImageView
            android:id="@+id/user"
            android:layout_width="66dp"
            android:layout_height="61dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/user" />


        <EditText
            android:id="@+id/sign_up_name"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_below="@+id/user"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:hint="@string/name">

        </EditText>


        <EditText
            android:id="@+id/sign_up_account"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_below="@id/sign_up_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />


        <EditText
            android:id="@+id/sign_up_password"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_below="@id/sign_up_account"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:hint="@string/pwd"
            android:inputType="textPassword" />


        <LinearLayout
            android:id="@+id/ly"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_alignStart="@+id/sign_up_password"
            android:layout_alignTop="@+id/sign_up_password"
            android:layout_alignEnd="@+id/sign_up_password"
            android:layout_alignBottom="@+id/sign_up_password"
            android:layout_marginStart="260dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="-1dp"
            android:layout_marginEnd="-50dp"
            android:layout_marginBottom="1dp">
            <!--android:layout_toEndOf="@+id/sign_up_password"-->

            <ImageView
                android:id="@+id/sign_up_eye_photo"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="center" />
        </LinearLayout>

        <EditText
            android:id="@+id/sign_up_telephone_number"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_below="@id/sign_up_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:hint="@string/phoneNum" />

        <Button
            android:id="@+id/sign_up_summit"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@id/sign_up_telephone_number"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:background="@drawable/sign_button_up_background"
            android:text="@string/summit"
            android:textColor="#FFFFFF" />
    </RelativeLayout>




</RelativeLayout>