<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">
    <Button
        android:id="@+id/forget_back"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/back1"
        android:layout_margin="20dp"/>

    <TextView
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="70dp"
        android:text="@string/PwdSet"
        android:textColor="@color/black"
        android:textSize="30sp" />


    <ImageView
        android:id="@+id/forget_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="190dp"
        android:layout_marginBottom="20dp"
        android:scaleType="fitXY"
        android:src="@drawable/forget_photo" />

    <EditText
        android:id="@+id/email"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/forget_photo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"

        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/pwd"
        android:inputType="textPassword" />

    <LinearLayout
        android:id="@+id/ly"
        android:layout_width="40dp"
        android:layout_height="50dp"

        android:layout_alignStart="@+id/new_password"
        android:layout_alignTop="@+id/new_password"
        android:layout_alignEnd="@+id/new_password"
        android:layout_alignBottom="@+id/new_password"
        android:layout_marginStart="260dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="-50dp"
        android:layout_marginBottom="0dp"
        android:layout_toRightOf="@+id/new_password">


        <ImageView
            android:id="@+id/eye_photo"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_gravity="center" />
    </LinearLayout>

    <EditText
        android:id="@+id/new_password2"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/new_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="确认新密码:"
        android:inputType="textPassword" />
    <LinearLayout
        android:id="@+id/ly2"
        android:layout_width="40dp"
        android:layout_height="50dp"

        android:layout_alignStart="@+id/new_password2"
        android:layout_alignTop="@+id/new_password2"
        android:layout_alignEnd="@+id/new_password2"
        android:layout_alignBottom="@+id/new_password2"
        android:layout_marginStart="260dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="-50dp"
        android:layout_marginBottom="0dp"
        android:layout_toRightOf="@+id/new_password2">


        <ImageView
            android:id="@+id/eye_photo2"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_gravity="center" />
    </LinearLayout>

    <Button
        android:id="@+id/forget_summit"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/new_password2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/sign_button_up_background"
        android:text="@string/summit"
        android:textColor="#FFFFFF" />

</RelativeLayout>